--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock paper scissors</title>
-    <script src="./rps-script.js"></script>
+    <script src="./rps-script.js" defer></script>
 </head>
-<body>
+<body in="#body">
     
 </body>
 </html>
